fixing priority spacing

--- a/apsc-collab-css/partials/_grid.scss
+++ b/apsc-collab-css/partials/_grid.scss
@@ -119,6 +119,7 @@ p#increase-impact, p#accelerate-solutions{
     padding-left:4%;
     padding-right:4%;
     padding-bottom:2%;
+    margin-top: 2em;
     color:white;
     background-image: url(https://apsc-strategicplan2020.sites.olt.ubc.ca/files/2020/03/priority-background-cropped.jpg);
 
